Changed structure and some other changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Aymvn | Timezone Converter</title>
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="src/style.css" />
+        <link
+            rel="shortcut icon"
+            href="assets/world-time.png"
+            type="image/x-icon" />
         <script
             src="https://kit.fontawesome.com/4ee017f251.js"
             crossorigin="anonymous"></script>
@@ -55,6 +59,13 @@
                 Convert
             </button>
         </form>
-        <script src="index.js"></script>
+        <footer>
+            <p>
+                Made with <i class="fa-solid fa-heart"></i> by
+                <a href="https://aymvn.tech" target="_blank">Aymvn</a>
+            </p>
+        </footer>
+
+        <script src="src/index.js"></script>
     </body>
 </html>
